Ajustes nas controllers