@@ -20,15 +20,16 @@ import io.swagger.v3.oas.annotations.tags.Tag;
 
 import jakarta.validation.Valid;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.*;
 
 @RestController
-@RequestMapping(value = "/bairros", produces = "application/json", consumes = "application/json")
+@RequestMapping("/bairros")
 @Tag(name = "Bairros", description = "Controle de Bairros")
 @Validated
 public class BairroController {
+
+    private static final String LISTAR_TODOS = "listarTodos";
 
     private final BairroService bairroService;
 
@@ -54,13 +55,13 @@ public class BairroController {
         List<EntityModel<BairroDTO>> bairros = bairrosPaginados.getContent().stream()
                 .map(bairro -> EntityModel.of(bairro,
                         linkTo(methodOn(BairroController.class).obterBairro(bairro.getBairroId())).withSelfRel()))
-                .collect(Collectors.toList());
+                .toList(); // Substituído por Stream.toList()
 
         return CollectionModel.of(bairros,
                 linkTo(methodOn(BairroController.class).listarTodos(page, size)).withSelfRel());
     }
 
-    @GetMapping(value = "/{id}")
+    @GetMapping("/{id}")
     @Operation(summary = "Obter um bairro específico", description = "Retorna os detalhes do bairro fornecendo o ID")
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Bairro encontrado"),
@@ -72,7 +73,7 @@ public class BairroController {
         BairroDTO bairroDTO = bairroService.obterPorId(id);
         return EntityModel.of(bairroDTO,
                 linkTo(methodOn(BairroController.class).obterBairro(id)).withSelfRel(),
-                linkTo(methodOn(BairroController.class).listarTodos(0, 10)).withRel("listarTodos"));
+                linkTo(methodOn(BairroController.class).listarTodos(0, 10)).withRel(LISTAR_TODOS)); // Substituído literal por constante
     }
 
     @PostMapping
@@ -88,10 +89,10 @@ public class BairroController {
         BairroDTO bairroDTO = bairroService.criarBairro(bairroCreateDTO);
         return EntityModel.of(bairroDTO,
                 linkTo(methodOn(BairroController.class).obterBairro(bairroDTO.getBairroId())).withSelfRel(),
-                linkTo(methodOn(BairroController.class).listarTodos(0, 10)).withRel("listarTodos"));
+                linkTo(methodOn(BairroController.class).listarTodos(0, 10)).withRel(LISTAR_TODOS)); // Substituído literal por constante
     }
 
-    @PutMapping(value = "/{id}")
+    @PutMapping("/{id}")
     @Operation(summary = "Atualizar um bairro", description = "Atualiza as informações de um bairro existente")
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Bairro atualizado com sucesso"),
@@ -105,10 +106,10 @@ public class BairroController {
         BairroDTO bairroDTO = bairroService.atualizarBairro(id, bairroCreateDTO);
         return EntityModel.of(bairroDTO,
                 linkTo(methodOn(BairroController.class).obterBairro(id)).withSelfRel(),
-                linkTo(methodOn(BairroController.class).listarTodos(0, 10)).withRel("listarTodos"));
+                linkTo(methodOn(BairroController.class).listarTodos(0, 10)).withRel(LISTAR_TODOS)); // Substituído literal por constante
     }
 
-    @DeleteMapping(value = "/{id}")
+    @DeleteMapping("/{id}")
     @ResponseStatus(HttpStatus.NO_CONTENT)
     @Operation(summary = "Deletar um bairro", description = "Remove um bairro com o ID fornecido")
     @ApiResponses(value = {
